fixed profiles page on mobile

--- a/src/react-components/RootPage/Profiles/Profiles.css
+++ b/src/react-components/RootPage/Profiles/Profiles.css
@@ -31,6 +31,10 @@
     }
 
     .profiles {
-        min-height: 0;
+        padding-top: 120px;
+        overflow-y: scroll;
+        display: block;
+        align-items: none;
+        text-align: center;
     }
 }
